--- a/src/assets/style/generals/_generals.scss
+++ b/src/assets/style/generals/_generals.scss
@@ -1,5 +1,32 @@
 html,
 body {
-    background: inherit;
-    font-family: "Poppins", sans-serif;
+  background: #fafafa;
+  font-family: "Poppins", sans-serif;
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: $green;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #6ca023;
+}
+
+.container {
+  max-width: 1485px;
+  width: 100%;
+  margin: 0 auto;
+}
+
+.big-title {
+  color: $darkBlue;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 54px;
+  font-family: "Poppins";
 }
