--- a/src/assets/style/main.scss
+++ b/src/assets/style/main.scss
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap");
 @import "./generals/narmalize";
 @import "./generals/mixins";
-@import "./generals/generals";
 @import "./generals/variables";
 @import "./companents/login/login-pge";
+@import "./generals/root";
+@import "./generals/generals";
