--- a/src/assets/style/main.scss
+++ b/src/assets/style/main.scss
@@ -1,6 +1,14 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap");
 @import "./generals/narmalize";
 @import "./generals/mixins";
-@import "./generals/generals";
 @import "./generals/variables";
 @import "./companents/login/login-pge";
+@import "./companents/info-card";
+@import "./companents/course-card";
+@import "./companents/hero-card";
+@import "./companents/plan-card";
+@import "./companents/practise-card";
+@import "./companents/posting-card";
+@import "./companents/sale-card";
+@import "./companents/root";
+@import "./generals/generals";
