add home and courses page

--- a/src/assets/style/components/_root.scss
+++ b/src/assets/style/components/_root.scss
@@ -55,6 +55,7 @@
   &-header {
     position: sticky;
     top: 0;
+    z-index: 10;
     width: 100%;
     display: flex;
     align-items: center;
