--- a/src/assets/style/main.scss
+++ b/src/assets/style/main.scss
@@ -4,4 +4,11 @@
 @import "./generals/variables";
 @import "./components/login/login-pge";
 @import "./components/root";
+@import "./components/global-components/course-card";
+@import "./components/home/hero-card";
+@import "./components/home/info-card";
+@import "./components/home/plan-card";
+@import "./components/home/practise-card";
+@import "./components/courses/posting-card";
+@import "./components/courses/sale-card";
 @import "./generals/generals";
