--- a/src/assets/style/components/_root.scss
+++ b/src/assets/style/components/_root.scss
@@ -12,6 +12,12 @@
     gap: 74px;
     background-color: $white;
     padding: 33px 46px;
+    background: rgba(255, 255, 255, 0.85);
+    backdrop-filter: blur(17px);
+    -webkit-backdrop-filter: blur(17px);
+    -webkit-box-shadow: 14px 0px 10px -10px #b6b6b61a;
+    -moz-box-shadow: 14px 0px 10px -10px rgba(182, 182, 182, 0.1);
+    box-shadow: 14px 0px 10px -10px rgba(182, 182, 182, 0.1);
 
     &_list {
       display: flex;
@@ -29,8 +35,20 @@
         font-weight: 500;
         color: $deepPurple;
 
+        &.hidden {
+          display: none;
+        }
+
         &.active {
           color: $white;
+
+          &:hover {
+            background-color: $green;
+          }
+        }
+
+        &:hover {
+          background-color: #f5f5f5;
         }
       }
 
@@ -38,6 +56,9 @@
         border-radius: 16px;
         background-color: $green;
         color: $white;
+        -webkit-box-shadow: 4px 4px 14px 0px rgba(65, 88, 33, 0.2);
+        -moz-box-shadow: 4px 4px 14px 0px rgba(65, 88, 33, 0.2);
+        box-shadow: 4px 4px 14px 0px rgba(65, 88, 33, 0.2);
 
         svg {
           path {
@@ -62,6 +83,12 @@
     justify-content: space-between;
     padding: 30px 50px;
     background-color: $white;
+    -webkit-box-shadow: 0px 14px 10px -10px #b6b6b61a;
+    -moz-box-shadow: 0px 14px 10px -10px rgba(182, 182, 182, 0.1);
+    box-shadow: 0px 14px 10px -10px rgba(182, 182, 182, 0.1);
+    background: rgba(255, 255, 255, 0.85);
+    backdrop-filter: blur(17px);
+    -webkit-backdrop-filter: blur(17px);
 
     &_actions {
       display: flex;
@@ -74,7 +101,21 @@
     width: 100%;
 
     &_inside {
-      padding: 40px;
+      padding-block: 40px;
     }
   }
+}
+
+.header__dropdown_label {
+  font-size: 20px;
+  font-weight: 400;
+  margin-left: 3px;
+  color: $deepPurple;
+}
+
+.danger-label {
+  font-size: 20px;
+  font-weight: 400;
+  margin-left: 3px;
+  color: #ff8880;
 }
