--- a/src/assets/style/components/home/_info-card.scss
+++ b/src/assets/style/components/home/_info-card.scss
@@ -14,9 +14,11 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    row-gap: 20px;
+    margin-bottom: 68px;
   }
 
-  &__bgImg {
+  &__bg-img {
     right: 0px;
     bottom: 13px;
     position: absolute;
