--- a/src/assets/style/components/global-components/_course-card.scss
+++ b/src/assets/style/components/global-components/_course-card.scss
@@ -2,24 +2,26 @@
   position: relative;
   display: flex;
   justify-content: center;
+  flex-direction: column;
   border-radius: 16px;
-  max-width: 480px;
-  width: 100%;
-  padding: 20px 26px 22px 26px;
+  padding: 24px;
   background-color: $green;
 
   &__wrapper {
     display: flex;
-    justify-content: space-between;
+    flex-wrap: wrap;
+    column-gap: 15px;
+    row-gap: 15px;
+    margin-block: 24px 56px;
   }
 
-  &__bgImg {
+  &__bg-img {
     position: absolute;
     right: 0px;
     bottom: -10px;
   }
 
-  &__title {
+  &__main-entry {
     font-size: 24px;
     color: $darkBlue;
     font-weight: 600;
@@ -56,22 +58,17 @@
     font-weight: 600;
     line-height: 21px;
 
-    &-text {
+    &-inner {
       display: flex;
       align-items: center;
       gap: 4px;
     }
   }
 
-  &__lgtitle {
-    margin-block: 68px 47px;
-  
-    &-link {
-      color: $green;
-      font-size: 18px;
-      font-weight: 600;
-      line-height: 27px;
-    }
+  &__link {
+    color: $green;
+    font-size: 18px;
+    font-weight: 600;
   }
 }
 
@@ -95,33 +92,4 @@
   ).ant-progress.ant-progress-status-success
   .ant-progress-bg {
   background-color: $darkBlue;
-}
-
-//end
-
-.new-course {
-  display: flex;
-  align-items: center;
-
-  &__inner {
-    display: flex;
-    gap: 40px;
-  }
-
-  &__title {
-    margin-block: 42px 24px;
-  }
-
-  &__btn {
-    padding: 18px;
-    border-radius: 16px;
-    max-width: max-content;
-    background-color: $white;
-    transform: translateX(-20px);
-    box-shadow: -8px 3px 30px 0px rgba(55, 69, 87, 0.4);
-  }
-}
-
-.courses-cards_mblock {
-  margin-block: 32px 56px;
 }
