--- a/src/assets/style/generals/_generals.scss
+++ b/src/assets/style/generals/_generals.scss
@@ -66,6 +66,12 @@ body {
   gap: 40px;
 }
 
+.profile__page {
+  width: 100% !important;
+  display: flex;
+  gap: 43px;
+}
+
 .green-small_text {
   font-weight: 600;
   font-size: 14px;
