--- a/src/assets/style/main.scss
+++ b/src/assets/style/main.scss
@@ -13,4 +13,17 @@
 @import "./components/home/calendar";
 @import "./components/lesson-table/big-calendar";
 @import "./components/lesson-table/week-calendar";
+@import "./components/profile/courses-completed";
+@import "./components/profile/current-courses";
+@import "./components/profile/profilePart";
+@import "./components/lessons/accordion";
+@import "./components/lessons/tab";
+@import "./components/lessons/video";
+@import "./components/lessons/video/files";
+@import "./components/lessons/video/homework";
+@import "./components/lessons/video/information";
+@import "./components/lessons/video/test";
+@import "./components/modules/module";
+@import "./components/modules/proccess-card";
+@import "./components/payment/pay-card";
 @import "./generals/generals";
