--- a/src/assets/style/components/global-components/_detailed-btn.scss
+++ b/src/assets/style/components/global-components/_detailed-btn.scss
@@ -7,4 +7,10 @@
   font-size: 18px;
   font-weight: 400;
   color: $darkBlue;
+  padding-block: 18px;
+  border-radius: 16px;
+
+  &:hover {
+    background-color: #ededed;
+  }
 }
