--- a/src/assets/style/main.scss
+++ b/src/assets/style/main.scss
@@ -4,13 +4,27 @@
 @import "./generals/variables";
 @import "./components/login/login-pge";
 @import "./components/root";
+@import "./components/modules/proccess-card";
 @import "./components/global-components/course-card";
 @import "./components/global-components/detailed-btn";
+@import "./components/global-components/green-btn";
 @import "./components/global-components/plan-card";
 @import "./components/home/hero-card";
 @import "./components/home/info-card";
 @import "./components/home/practise-card";
 @import "./components/home/calendar";
+@import "./components/payment/pay-card";
 @import "./components/lesson-table/big-calendar";
 @import "./components/lesson-table/week-calendar";
+@import "./components/modules/module";
+@import "./components/lessons/accordion";
+@import "./components/lessons/tab";
+@import "./components/video/files";
+@import "./components/video/homework";
+@import "./components/video/information";
+@import "./components/video/test";
+@import "./components/homework/homework-card";
+@import "./components/profile/courses-completed";
+@import "./components/profile/current-courses";
+@import "./components/profile/profilePart";
 @import "./generals/generals";
