--- a/src/assets/style/main.scss
+++ b/src/assets/style/main.scss
@@ -19,6 +19,7 @@
 @import "./components/lessons/accordion";
 @import "./components/lessons/tab";
 @import "./components/lessons/video";
+@import "./components/lessons/video/closedFiles";
 @import "./components/lessons/video/files";
 @import "./components/lessons/video/homework";
 @import "./components/lessons/video/information";
