--- a/src/assets/style/components/lessons/video/_files.scss
+++ b/src/assets/style/components/lessons/video/_files.scss
@@ -1,56 +1,65 @@
 .files {
-  position: relative;
-  overflow: hidden;
-  margin-top: 33px;
-  max-width: max-content;
-  background-color: $green;
-  padding: 24px 81px 40px 40px;
-  border-radius: 16px;
+  width: 1008px;
   display: flex;
-  flex-direction: column;
-  gap: 47px;
-  filter: drop-shadow(0px 20px 50px rgba(55, 69, 87, 0.10));
+  flex-wrap: wrap;
+  column-gap: 47px;
+  row-gap: 47px;
 
-  &-title {
-    max-width: 356px;
-    width: 100%;
-    color: $white;
+  &__child {
+    padding: 13px 25px;
+    width: 464px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-radius: 15px;
+    border: 1px solid #dbdbdb;
+
+    &-box {
+      display: flex;
+      align-items: center;
+      gap: 21px;
+    }
+
+    &-btn {
+      background-color: $green;
+      border-radius: 10px;
+      padding: 6px 12px;
+      font-size: 14px;
+      font-weight: 500;
+      color: $white;
+    }
+
+    &-title {
+      color: $deepPurple;
+      font-size: 18px;
+      font-weight: 500;
+    }
+  }
+}
+
+.group {
+  display: flex;
+  align-items: center;
+  margin-top: 41px;
+  margin-bottom: 36px;
+  gap: 16px;
+
+  &__title {
     font-size: 24px;
-    font-weight: 600;
+    font-weight: 400;
+    color: $darkBlue;
   }
 
-  &-btn {
-    max-width: max-content;
-    padding: 10px 56px;
+  &__btn {
+    display: flex;
+    padding: 7px 11px;
+    justify-content: center;
+    align-items: center;
+    gap: 24px;
     border-radius: 8px;
-    background: $white;
-    color: $green;
+    background: #fec64f;
+    color: $white;
     font-size: 18px;
     font-weight: 600;
-  }
-
-  &-book__icon {
-    position: absolute;
-    top: 5px;
-    left: 5px;
-  }
-
-  &-calendar__icon {
-    position: absolute;
-    top: 122px;
-    right: 91.37px;
-    transform: rotate(-21.38deg);
-  }
-
-  &-crown__icon {
-    position: absolute;
-    bottom: 28.65px;
-    left: 9px;
-  }
-
-  &-big__crown-icon {
-    position: absolute;
-    top: 23px;
-    right: -35px;
   }
 }
