--- a/src/assets/style/components/profile/_current-courses.scss
+++ b/src/assets/style/components/profile/_current-courses.scss
@@ -62,7 +62,7 @@
 
 :where(.css-dev-only-do-not-override-byeoj0).ant-progress.ant-progress-circle
   .ant-progress-text {
-  color: #374557;
+  color: $darkBlue;
   line-height: 1;
   font-size: 24px;
   font-weight: 700;
