--- a/src/assets/style/components/profile/_profilePart.scss
+++ b/src/assets/style/components/profile/_profilePart.scss
@@ -66,7 +66,7 @@
     &-cup {
       padding: 16px;
       border-radius: 16px;
-      background-color: #fafafa;
+      background-color: $light;
     }
   }
 
@@ -82,7 +82,7 @@
     margin-top: 16px;
     padding: 24px;
     border-radius: 8px;
-    background: #fafafa;
+    background: $light;
 
     &-text {
       font-size: 14px;
