--- a/src/assets/style/generals/_narmalize.scss
+++ b/src/assets/style/generals/_narmalize.scss
@@ -31,6 +31,6 @@ button {
   background: inherit;
 }
 ::selection {
-  background-color: #7dba28;
-  color: #fff;
+  background-color: $green;
+  color: $white;
 }
