--- a/src/assets/style/main.scss
+++ b/src/assets/style/main.scss
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap");
-@import "./generals/narmalize";
 @import "./generals/mixins";
 @import "./generals/variables";
+@import "./generals/narmalize";
 @import "./components/login/login-pge";
 @import "./components/root";
 @import "./components/modules/proccess-card";
@@ -18,6 +18,7 @@
 @import "./components/lesson-table/week-calendar";
 @import "./components/modules/module";
 @import "./components/lessons/accordion";
+@import "./components/lessons/member-modal";
 @import "./components/lessons/tab";
 @import "./components/video/files";
 @import "./components/video/homework";
