--- a/src/assets/style/components/lessons/_member-modal.scss
+++ b/src/assets/style/components/lessons/_member-modal.scss
@@ -6,9 +6,22 @@
 }
 
 .member-modal__label {
+  position: relative;
+
+  &-title {
+    font-size: 16px;
+    font-weight: 600;
+    color: $green;
+  }
+}
+
+.member-modal__error {
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  color: red;
   font-size: 16px;
   font-weight: 600;
-  color: $green;
 }
 
 .member-modal__title {
