--- a/src/assets/style/components/lessons/_member-modal.scss
+++ b/src/assets/style/components/lessons/_member-modal.scss
@@ -1,29 +1,3 @@
-.member-modal__form {
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-  margin-block: 50px 30px;
-}
-
-.member-modal__label {
-  position: relative;
-
-  &-title {
-    font-size: 16px;
-    font-weight: 600;
-    color: $green;
-  }
-}
-
-.member-modal__error {
-  position: absolute;
-  top: 0px;
-  right: 0px;
-  color: red;
-  font-size: 16px;
-  font-weight: 600;
-}
-
 .member-modal__title {
   font-size: 22px;
   font-weight: 700;
@@ -46,4 +20,12 @@
     color: $green !important;
     border: 1px solid $green !important;
   }
+}
+
+.member-modal__buttons {
+  width: 100%;
+  display: flex;
+  gap: 15px;
+  justify-content: end;
+  margin-top: 50px;
 }
